force-app/main/default/objects/Opportunity/fields/TotalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountPercent__c</fullName>
    <description>Combining a Discount Percent field and a Discount Amount field</description>
    <formula>BLANKVALUE(DiscountPercent__c, 0.00) + BLANKVALUE(DiscountPercentOfAmount__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>