force-app/main/default/objects/Opportunity/fields/TotalDownPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalDownPayment__c</fullName>
    <label>Total Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>