force-app/main/default/objects/Opportunity/fields/TotalInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInstallmentAmount__c</fullName>
    <label>Total Installment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>