force-app/main/default/objects/Opportunity/fields/TotalInstallmentPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalInstallmentPercent__c</fullName>
    <label>Total Installment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>