force-app/main/default/objects/Opportunity/fields/TransferFee__c.field-meta.xml
<CustomField>
    <fullName>TransferFee__c</fullName>
    <description>จำนวนเงินโอนกรรมสิทธิ์</description>
    <label>Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>