force-app/main/default/objects/Opportunity/fields/TransferPayment__c.field-meta.xml
<CustomField>
    <fullName>TransferPayment__c</fullName>
    <description>จำนวนเงินงวดโอนทั้งหมด</description>
    <label>Transfer Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>