force-app/main/default/objects/Opportunity/fields/TransferPaymentPercentage__c.field-meta.xml
<CustomField>
    <fullName>TransferPaymentPercentage__c</fullName>
    <description>สัดส่วน % เงินงวดโอนจากเงินทั้งหมด</description>
    <label>Transfer Payment Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>