force-app/main/default/objects/Opportunity/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The original price before discounts. Get value from &apos;Pricebook2&apos;</description>
    <label>Unit Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>