force-app/main/default/objects/Opportunity/fields/UnitPricePerSqm__c.field-meta.xml
<CustomField>
    <fullName>UnitPricePerSqm__c</fullName>
    <label>Unit Price/sq.m.</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>