force-app/main/default/objects/Opportunity/fields/UnitsofInterest__c.field-meta.xml
<CustomField>
    <fullName>UnitsofInterest__c</fullName>
    <label>Units of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitsofInterest</valueSetName>
    </valueSet>
</CustomField>