force-app/main/default/objects/Opportunity/fields/WaterMeterReaderInsurFee__c.field-meta.xml
<CustomField>
    <fullName>WaterMeterReaderInsurFee__c</fullName>
    <description>Water Meter Reader Insur. Fee - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Water Meter Reader Insur. Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>