force-app/main/default/objects/Opportunity/fields/WaterSupplyMeterReaderInstallFee__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyMeterReaderInstallFee__c</fullName>
    <description>Water Supply Meter Reader Install. Fee - งวดที่เกี่ยวข้องกับค่าใช้จ่ายวันโอน</description>
    <label>Water Supply Meter Reader Install. Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>