force-app/main/default/objects/Opportunity/recordTypes/CoAgent.recordType-meta.xml
<RecordType>
    <fullName>CoAgent</fullName>
    <active>true</active>
    <businessProcess>Co-Agent</businessProcess>
    <label>Co-Agent</label>
</RecordType>