force-app/main/default/objects/Opportunity/recordTypes/InHouse.recordType-meta.xml
<RecordType>
    <fullName>InHouse</fullName>
    <active>true</active>
    <businessProcess>In-House</businessProcess>
    <label>In-House</label>
</RecordType>