force-app/main/default/objects/Opportunity/validationRules/AgencyRequiredForAgentReferral.validationRule-meta.xml
<ValidationRule>
    <fullName>AgencyRequiredForAgentReferral</fullName>
    <active>true</active>
    <description>Ensures that if the Lead Source is &apos;Agent Referral&apos;, the Channel field must be populated. If the Lead Source is not &apos;Agent Referral&apos;, the Channel field must be empty.</description>
    <errorConditionFormula>AND(
        NOT(ISPICKVAL(LeadSource, &quot;Agent Referral&quot;)),
        NOT(ISBLANK(Channel__c))
    )</errorConditionFormula>
    <errorMessage>Please check Lead Source information.</errorMessage>
</ValidationRule>