force-app/main/default/objects/Opportunity/validationRules/AllowStageChangeWhenQuoteSynced.validationRule-meta.xml
<ValidationRule>
    <fullName>AllowStageChangeWhenQuoteSynced</fullName>
    <active>true</active>
    <description>Allow Stage Change to Reservation When Quote Is Synced</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Reservation&quot;),
    NOT( IsQuoteSynced__c ), 
    OR(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Quotation&quot;),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiation&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Please sync quote before changing the stage.</errorMessage>
</ValidationRule>