force-app/main/default/objects/Opportunity/validationRules/CheckPaymentterm.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPaymentterm</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 ISNULL(PaymentTermMaster__c), 
 Not ISBLANK(ReservationDueDate__c)

)</errorConditionFormula>
    <errorDisplayField>PaymentTermMaster__c</errorDisplayField>
    <errorMessage>Please input payment term first.</errorMessage>
</ValidationRule>