force-app/main/default/objects/Opportunity/validationRules/DoNotEditWhenClosedLost.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditWhenClosedLost</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
ISPICKVAL(PRIORVALUE(  StageName  ), &quot;Closed Lost&quot;),
NOT ISCHANGED(LastGLStatusInPojjaman__c) 



)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the opportunity is Closed Lost</errorMessage>
</ValidationRule>