force-app/main/default/objects/Opportunity/validationRules/DoNotEditWhenClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditWhenClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(PRIORVALUE(  StageName  ), &quot;Closed Won&quot;)



)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the opportunity is closed won</errorMessage>
</ValidationRule>