force-app/main/default/objects/Opportunity/validationRules/LostReasonWhenClosedLostOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>LostReasonWhenClosedLostOnly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
    OR(
        NOT(ISBLANK(text( LossReason__c ))),
        NOT(ISBLANK( OtherLostRejectReason__c ))
    )
)</errorConditionFormula>
    <errorMessage>You cannot input &apos;Lost Reason&apos; and &apos;Other Lost Reason&apos;, please check opportunity stage.</errorMessage>
</ValidationRule>