force-app/main/default/objects/Opportunity/validationRules/RequiredLostReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredLostReason</fullName>
    <active>true</active>
    <description>To ensures that the &quot;Lost Reason&quot; field is filled out when the Opportunity Stage is set to &quot;Closed Lost.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
  ISPICKVAL( LossReason__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>LossReason__c</errorDisplayField>
    <errorMessage>Please provide a Lost Reason when the Stage is set to &apos;Closed Lost.&apos;</errorMessage>
</ValidationRule>