force-app/main/default/objects/Opportunity/validationRules/RequiredOtherLostRejectReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredOtherLostRejectReason</fullName>
    <active>true</active>
    <description>To ensure that the &apos;Other Lost/Reject Reason&apos; field is required when the &apos;Loss Reason&apos; is Other</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(LossReason__c, &quot;Other&quot;),
        ISBLANK(OtherLostRejectReason__c)
    ),
    AND(
        NOT(ISPICKVAL(LossReason__c, &quot;Other&quot;)),
        NOT(ISBLANK(OtherLostRejectReason__c))
    )
)</errorConditionFormula>
    <errorDisplayField>OtherLostRejectReason__c</errorDisplayField>
    <errorMessage>Please provide the &apos;Other Lost/Reject Reason&apos; when Lost Reason is &apos;Other&apos;.</errorMessage>
</ValidationRule>