force-app/main/default/objects/Opportunity/validationRules/RequireReservationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireReservationDate</fullName>
    <active>true</active>
    <description>To ensure the reservation due date is filled out before update oppty stage to &apos;Reservation&apos;</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Reservation&quot;),
    OR(
        ISPICKVAL(PRIORVALUE(StageName), &quot;Open&quot;),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Quotation&quot;),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiation&quot;)
    ),
    ISBLANK( ReservationDueDate__c )
)</errorConditionFormula>
    <errorDisplayField>ReservationDueDate__c</errorDisplayField>
    <errorMessage>Please fill in the Reservation Due Date.</errorMessage>
</ValidationRule>