force-app/main/default/objects/Opportunity/validationRules/RestrictStageChangeFomReservation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictStageChangeFomReservation</fullName>
    <active>true</active>
    <description>Prevents users from changing stage from &quot;Reservation&quot; back to &quot;Open&quot;, &quot;Negotiation&quot;, or &quot;Quotation&quot;.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(StageName), &quot;Reservation&quot;),
  OR(
    ISPICKVAL(StageName, &quot;Open&quot;),
    ISPICKVAL(StageName, &quot;Negotiation&quot;),
    ISPICKVAL(StageName, &quot;Quotation&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Contact your administrator for help.</errorMessage>
</ValidationRule>