force-app/main/default/objects/Opportunity/validationRules/RestrictStageChanges.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictStageChanges</fullName>
    <active>true</active>
    <description>To ensures that the stage can only be changed from &quot;Reservation&quot; to &quot;Contract&quot; or from &quot;Contract&quot; to &quot;Transferred&quot;.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(StageName), &quot;Open&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Quotation&quot;) || 
             ISPICKVAL(StageName, &quot;Negotiation&quot;) || 
             ISPICKVAL(StageName, &quot;Reservation&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
             
            ISPICKVAL(PRIORVALUE(StageName), &quot;Quotation&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Negotiation&quot;) || 
             ISPICKVAL(StageName, &quot;Reservation&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)), 
             
            ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiation&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Quotation&quot;) || 
             ISPICKVAL(StageName, &quot;Reservation&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)), 
             
            ISPICKVAL(PRIORVALUE(StageName), &quot;Reservation&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Contract&quot;) || 
             ISPICKVAL(StageName, &quot;Quotation&quot;) || 
             ISPICKVAL(StageName, &quot;Negotiation&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
             
            ISPICKVAL(PRIORVALUE(StageName), &quot;Contract&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Transferred&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
             
            ISPICKVAL(PRIORVALUE(StageName), &quot;Transferred&quot;) &amp;&amp; 
            (ISPICKVAL(StageName, &quot;Contract&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Won&quot;) || 
             ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
             
            ISPICKVAL(StageName, &quot;Open&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Contact your administrator for help.</errorMessage>
</ValidationRule>