force-app/main/default/objects/Opportunity/validationRules/RestrictUpdateOpportunityInformation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUpdateOpportunityInformation</fullName>
    <active>true</active>
    <description>Prevents users from modifying the Discount Amount, Discount Percent Unit, and Unit Price fields when the Opportunity Stage is set to Reservation, Contract, Transferred, or Closed Won.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Reservation&quot;),
        ISPICKVAL(StageName, &quot;Contract&quot;),
        ISPICKVAL(StageName, &quot;Transferred&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    ),
    OR(
        ISCHANGED( Project__c ),
        ISCHANGED( Unit__c ),
        ISCHANGED( Quota__c ),         
        ISCHANGED( PaymentTermMaster__c ),        
        ISCHANGED( ReservationDueDate__c ),
        ISCHANGED( UnitPrice__c  ),
        ISCHANGED( DiscountAmount__c ),
        ISCHANGED( DiscountPercent__c )

    )
)</errorConditionFormula>
    <errorMessage>You cannot change opportunity information. Please , contact your administrator for help.</errorMessage>
</ValidationRule>