force-app/main/default/objects/Opportunity/validationRules/StageChangeContractToReservation.validationRule-meta.xml
<ValidationRule>
    <fullName>StageChangeContractToReservation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Reservation&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;Contract&quot;),
    ISPICKVAL( Contract.Status , &quot;Signed Contract&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot change the stage when the contract status is &apos;Signed.</errorMessage>
</ValidationRule>