force-app/main/default/objects/Opportunity/validationRules/StartOpportunityonStageOpen.validationRule-meta.xml
<ValidationRule>
    <fullName>StartOpportunityonStageOpen</fullName>
    <active>true</active>
    <description>Users must select stage Open when they create new opportunities.</description>
    <errorConditionFormula>AND(ISNEW(),NOT(ISPICKVAL( StageName , &quot;Open&quot;)))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Please Select Opportunity Stage is Open</errorMessage>
</ValidationRule>