force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OpportunityAge__c</columns>
    <columns>IsQuoteSynced__c</columns>
    <columns>NetPrice__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>